--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/_AddEvent.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/_AddEvent.cshtml
@@ -177,9 +177,10 @@
 			todayHighlight: true,
 			autoclose: true,
 			useCurrent:true,
-			//defaultDate: false,
+			defaultDate: false,
 			//setDate: null,
-			dateFormat: 'mm/dd/yyyy'
+			dateFormat: 'mm/dd/yyyy',
+			startDate: '-100y'
 		});
 
 		$("#StartTime, #EndTime").datetimepicker({
