--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/Event.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/Event.cshtml
@@ -10,6 +10,9 @@
 <link href="~/Content/bootstrap-datetimepicker.css" rel="stylesheet" />
 
 <style>
+	.nav-link active {
+		color: antiquewhite;
+	}
 	.requiredA:after {
 		content: " *";
 		font-weight: bold;
@@ -117,6 +120,18 @@
 	});
 
 	$(document).ready(function () {
+		//$("li nav-item").on("click", function () {
+		//	$(".li nav-item").removeClass("nav-link active");
+		//	$(this).addClass("nav-link active");
+		//});
+
+		//$('ul.navbar-nav li').click(function (e) {
+		//	$('.navbar-nav li').removeClass('active');
+		//	var $this = $(this);
+		//	$this.addClass('active');
+		//	//e.preventDefault();
+		//});
+
 		$("#AddEvent").on("click", function () {
 			$("#eventModal").load("/Event/RefreshEventPartialView");
 			$("#eventModal").modal();
