--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_MainMenu.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_MainMenu.cshtml
@@ -8,7 +8,7 @@
 					{
 						if (@item == "Home")
 						{
-							<li class="nav-item"> <a class="nav-link active" href="javascript: void(0);">Home<span class="sr-only">(current)</span></a> </li>
+							<li class="nav-item"> <a class="nav-link" href="javascript: void(0);">Home<span class="sr-only">(current)</span></a> </li>
 						}
 						if (@item == "About Us")
 						{
@@ -53,7 +53,7 @@
 					</ul>
 					@if(@ViewBag.Role == 2)
 					{
-					<a id="cart" href="javascript: void(0);"><img src="~/Content/img/cart-icon.png"> <span class="cart-count">2</span></a>
+						<a id="cart" href="javascript: void(0);"><img src="~/Content/img/cart-icon.png"> <span class="cart-count">2</span></a>
 					}
 				</div>
 			</div>
