--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeAddress.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeAddress.cshtml
@@ -1,64 +1,62 @@
 ﻿@model Chinmaya.Registration.Models.ContactDetails
 
-<div class="modal-dialog modal-dialog-centered modal-lg" role="dialog">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-body">
-				@using (Ajax.BeginForm("ChangeAddress", "Common", FormMethod.Post,
-						new AjaxOptions
-						{
-							OnSuccess = "OnSuccessChangeAddress"
-						}))
-				{
-					@Html.AntiForgeryToken()
-					<h5 class="modal-title">Change Address</h5>
-					@Html.HiddenFor(m => m.Email, new { id = "contactEmail" })
-					<div class="row">
-						<div class="col-md-6">
-							@Html.LabelFor(m => m.Address, new { @class = "requiredA" })
-							@Html.TextBoxFor(m => m.Address, new { @class = "form-control" })
-							@Html.ValidationMessageFor(m => m.Address, "", new { @class = "text-danger" })
-						</div>
-						<div class="col-md-6">
-							@Html.LabelFor(m => m.Country, new { @class = "requiredA" })
-							@Html.DropDownList("Country", new SelectList(ViewBag.CountryList, "Id", "Name", ViewBag.SelectedCountry), "Select", new { @class = "form-control", @style = "height: 35px;" })
-							@Html.ValidationMessageFor(m => m.Country, "", new { @class = "text-danger" })
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							@Html.LabelFor(m => m.State, new { @class = "requiredA" })
-							@Html.DropDownList("State", new SelectList(Enumerable.Empty<SelectListItem>(), "Id", "Name", ViewBag.SelectedState), "Select State", new { @class = "form-control", @style = "height: 35px;" })
-							@Html.ValidationMessageFor(m => m.State, "", new { @class = "text-danger" })
-						</div>
-						<div class="col-md-6">
-							@Html.LabelFor(m => m.City, new { @class = "requiredA" })
-							@Html.TextBoxFor(m => m.City, new { @class = "form-control" })
-							@Html.ValidationMessageFor(m => m.City, "", new { @class = "text-danger" })
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							@Html.LabelFor(m => m.ZipCode, new { @class = "requiredA" })
-							@Html.TextBoxFor(m => m.ZipCode, new { @class = "form-control" })
-							@Html.ValidationMessageFor(m => m.ZipCode, "", new { @class = "text-danger" })
-						</div>
-						<div class="col-md-6">
-							@Html.LabelFor(m => m.HomePhone, new { @class = "requiredA" })
-							@Html.TextBoxFor(m => m.HomePhone, new { @class = "form-control" })
-							@Html.ValidationMessageFor(m => m.HomePhone, "", new { @class = "text-danger" })
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<button class="btn btn-secondary float-left mr-3" id="btnCancelAddress" type="button" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
-							<button class="btn btn-orange" id="btnsubmitAddress" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
-						</div>
-					</div>
-				}
-			</div>
-		</div>
-	</div>
+<div class="modal-dialog modal-dialog-centered" role="dialog">
+    <div class="modal-content">
+        <div class="modal-body">
+            @using (Ajax.BeginForm("ChangeAddress", "Common", FormMethod.Post,
+                        new AjaxOptions
+                        {
+                            OnSuccess = "OnSuccessChangeAddress"
+                        }))
+            {
+                @Html.AntiForgeryToken()
+                <h5 class="modal-title">Change Address</h5>
+                    @Html.HiddenFor(m => m.Email, new { id = "contactEmail" })
+                    <div class="row">
+                        <div class="col-md-6">
+                            @Html.LabelFor(m => m.Address, new { @class = "requiredA" })
+                            @Html.TextBoxFor(m => m.Address, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.Address, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="col-md-6">
+                            @Html.LabelFor(m => m.Country, new { @class = "requiredA" })
+                            @Html.DropDownList("Country", new SelectList(ViewBag.CountryList, "Id", "Name", ViewBag.SelectedCountry), "Select", new { @class = "form-control", @style = "height: 35px;" })
+                            @Html.ValidationMessageFor(m => m.Country, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            @Html.LabelFor(m => m.State, new { @class = "requiredA" })
+                            @Html.DropDownList("State", new SelectList(Enumerable.Empty<SelectListItem>(), "Id", "Name", ViewBag.SelectedState), "Select State", new { @class = "form-control", @style = "height: 35px;" })
+                            @Html.ValidationMessageFor(m => m.State, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="col-md-6">
+                            @Html.LabelFor(m => m.City, new { @class = "requiredA" })
+                            @Html.TextBoxFor(m => m.City, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.City, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            @Html.LabelFor(m => m.ZipCode, new { @class = "requiredA" })
+                            @Html.TextBoxFor(m => m.ZipCode, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.ZipCode, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="col-md-6">
+                            @Html.LabelFor(m => m.HomePhone, new { @class = "requiredA" })
+                            @Html.TextBoxFor(m => m.HomePhone, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.HomePhone, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <button class="btn btn-secondary float-left mr-3" id="btnCancelAddress" type="button" data-dismiss="modal" aria-hidden="true">Cancel <i class="material-icons">cancel</i></button>
+                            <button class="btn btn-orange" id="btnsubmitAddress" type="submit" data-toggle="collapse">Submit <i class="material-icons">check_circle</i></button>
+                        </div>
+                    </div>
+            }
+        </div>
+    </div>
 </div>
 <script>
 
