--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeEmail.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeEmail.cshtml
@@ -1,35 +1,35 @@
 ﻿@model Chinmaya.Registration.Models.UpdateEmail
-<div class="modal-dialog modal-dialog-centered modal-lg" role="dialog">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-body">
-				@using (Ajax.BeginForm("ChangeEmail", "Common", FormMethod.Post,
-						new AjaxOptions
-						{
-							OnSuccess = "OnSuccessChangeEmail"
-						}))
-				{
-					@Html.AntiForgeryToken()
-					<h5 class="modal-title">Change Email</h5>
-					<div class="row">
-						@Html.HiddenFor(m => m.userId, new { id = "uId" })
-						<div class="col-md-12">
-							@Html.LabelFor(m => m.email, new { @class = "requiredA" })
-							@Html.TextBoxFor(m => m.email, new { @class = "form-control", @Name = "Email" })
-							@Html.ValidationMessageFor(m => m.email, "", new { @class = "text-danger" })
-						</div>
-					</div>
+<div class="modal-dialog modal-dialog-centered" role="dialog">
+    <div class="modal-content">
+        <div class="modal-body">
+            @using (Ajax.BeginForm("ChangeEmail", "Common", FormMethod.Post,
+                        new AjaxOptions
+                        {
+                            OnSuccess = "OnSuccessChangeEmail"
+                        }))
+            {
+                @Html.AntiForgeryToken()
+                <h5 class="modal-title">Change Email</h5>
+                    <div class="row">
+                        @Html.HiddenFor(m => m.userId, new { id = "uId" })
+                        <div class="col-md-12">
+                            @Html.LabelFor(m => m.email, new { @class = "requiredA" })
+                            @Html.TextBoxFor(m => m.email, new { @class = "form-control", @Name = "Email" })
+                            @Html.ValidationMessageFor(m => m.email, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-					<div class="row">
-						<div class="col-md-12">
-							<button class="btn btn-secondary float-left mr-3" id="btnCancelEmail" type="button" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
-							<button class="btn btn-orange" id="btnsubmitEmail" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
-						</div>
-					</div>
-				}
-			</div>
-		</div>
-	</div>
+
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <button class="btn btn-secondary float-left mr-3" id="btnCancelEmail" type="button" data-dismiss="modal" aria-hidden="true">Cancel <i class="material-icons">cancel</i></button>
+                            <button class="btn btn-orange" id="btnsubmitEmail" type="submit" data-toggle="collapse">Submit <i class="material-icons">check_circle</i></button>
+                        </div>
+                    </div>
+            }
+        </div>
+    </div>
 </div>
 <script>
 	function OnSuccessChangeEmail(response) {
